# SyncClip

./: .env  .env.template  .gitignore  .pdm-python  Makefile  README.md  _batch_download.py  app.py  baseline.sh  baseline_cpu.sh  baseline_gpu.sh  pyproject.toml  requirement-autodl.txt  requirement.txt
baselines/: __init__.py  clip4clip_based.py  common.py  pglsum_based.py  rule_based.py  svm_based.py
doc/: 音画同步.md
experiments/: README.md  __init__.py  build_candidates.py  config.py  csv_output.py  extract_clip.py  ground_truth.py  interactive.py  llm_planner.py  preprocess.py  profiling.py  render_ffmpeg.py  robustness.py  run_all.py  run_experiment.py  runner.py  sensitivity.py  statistics.py  transcribe_whisper.py  validate_plan.py  video_downloader.py  visualization.py
experiments/annotations/: ground_truth.json
experiments/metrics/: __init__.py  segment_metrics.py  semantic_metrics.py  sync_metrics.py
experiments/urls/: 442d84071b0a.meta.json  521c27b53dfb.meta.json  54fbb332721e.meta.json  5613e4e59cb3.meta.json  5eb262beefb2.meta.json  614cab67515e.meta.json  7ad0e59effef.meta.json  7fcb12d2563c.meta.json  80fef90b6944.meta.json  a0b05a5d2447.meta.json  a12cbf2f5c4c.meta.json  a728eaf94468.meta.json  a8be7fc09d5c.meta.json  aefeadf76a8b.meta.json  b8f00f22dcae.meta.json  be0b431494d5.meta.json  c07016902a72.meta.json  f90201fb446d.meta.json  f99b71077ddc.meta.json  fb319988fa5f.meta.json
scripts/: _compute_metrics.py  _run_robustness.py  _run_sensitivity.py  human_eval.py  organize_data.py  re_render.py  run_on_gpu_server.sh
src/agents/: audio_agent.py  blip_agent.py  clip_agent.py  combine_agent.py  frame_agent.py  merge_agent.py  merge_agent_by_golang.py  postprocess_agent.py  segment_agent.py  slice_agent.py  slice_agent_by_golang.py  synthesize_agent.py  video_agent.py  video_analyze_agent.py  whisper_agent.py
testcase/: rq1.py  rq2.py  rq3.py  rq5.py  test1.py  test2.py  test3.py  test4.py
(+11 files in other folders)
